# c2m2-submission-process

./: .gitignore  .sqlfluff  .sqlfluffignore  README.md  acquire_osf_c2m2_submission_tools.sh  manual_check.py  prepare_c2m2_submission.sh  pyproject.toml  requirements.txt  setup_env.sh  validate_submission.sh
data_ingestion/: cfde_convert.py  cfde_table_constants.py  ingestion.py  sql_info.md  table_ops.py  transform.py
data_ingestion/conversion_tables/: anatomy_mapping.tsv  assay_type_mapping.tsv  cfde_association.tsv  column_mapping.tsv  disease_association_type.tsv  file_format.tsv  subject_ethnicity.tsv  table_constants.tsv
kf_to_c2m2_etl/: README.md  associations.py  c2m2_table_origins.tsv  cfde_convert.py  cfde_table_constants.py  ds_db_check.ipynb  etl.py  etl_types.py  fhir-ingest.ipynb  fhir_ingest.ipynb  fhir_ingest.py  fhir_table_joiner.py  fhir_transform.py  file_locations.py  file_locations.yaml  ingest.py  ingestion.py  kf_table_combiner.py  kf_to_c2m2_etl.py  loader.py  pandas_io_util.py  seq_exp_check.ipynb  sql_info.md  studies_on_portal.tsv  table_ops.py  time_keeper.py  transform.py  value_converter.py
kf_to_c2m2_etl/conversion_tables/: assay_type_mapping.tsv  file_format.tsv  project_disease_matrix_only.tsv  table_constants.tsv
scripts/: prepare_C2M2_submission.py
src/: loader.py  pipeline.sh  prepare_c2m2_submission.sh  setup_env.sh  sql_to_tsv_stream.py  validate_submission.sh
src/sql/: biosample.sql  biosample_disease.sql  dcc.sql  (+11 more)
submission_diff_inquiry/: README.md  Y23_Q4_inquiry.ipynb  create_dbs.py  submission_diff_check.ipynb
(+50 files in other folders)
